Fixed BillyVoice display issue on mobile devices

--- a/css/lrtHP.css
+++ b/css/lrtHP.css
@@ -17,7 +17,7 @@
 /* Extra small devices (phones, less than 768px) */
 @media only screen and (max-width: 768px) {	
 	#divBillyVoice > blockquote {
-		margin-left: 120px;
+		margin-left: 15px;
 	}
 }
 
